fix(Checkbox, Radio, Fieldset): :bug: Make sure spacings are only applied when needed

--- a/packages/react/src/components/form/Checkbox/Group/Group.module.css
+++ b/packages/react/src/components/form/Checkbox/Group/Group.module.css
@@ -1,5 +1,3 @@
-.xsmall,
-.small,
-.medium {
+.spacing {
   margin-left: calc(var(--fds-spacing-2) * -1);
 }
