--- a/packages/react/src/components/form/Radio/Group/Group.module.css
+++ b/packages/react/src/components/form/Radio/Group/Group.module.css
@@ -1,6 +1,4 @@
-.xsmall,
-.small,
-.medium {
+.spacing {
   margin-left: calc(var(--fds-spacing-2) * -1);
 }
 
